--- a/app/views/allocated_tasks/index.html.erb
+++ b/app/views/allocated_tasks/index.html.erb
@@ -55,7 +55,7 @@
                                   <%if o.oppty.present?%>
                                     <li id="<%= o.id%>" class="col-md-12">
                                         <h5 class="col-md-11"><%= link_to o.oppty.opptyName, o.oppty, style: "border: 0px !important;"%></h5>
-                                        <img id="delete-btn-manager" class="btn-x-manager" onclick="confirmDeleteManager(<%= o.id %>, <%= name.delete(' ') + 'ajax' + 'assigned'%>)" src="/assets/redx.png" alt="X" border="0"/>
+                                        <img id="delete-btn-manager" class="btn-x-manager" onclick="confirmDeleteManager(<%= o.id %>, <%= name.delete(' ') + 'ajax' + 'assigned'%>)" src=<%= asset_path 'redx.png' %> alt="X" border="0"/>
                                     </li>
                                   <%end%>
                                 <%end%>
@@ -89,7 +89,7 @@
                                     <% if o.oppty.present?%>
                                         <li id="<%= o.id%>" class="col-md-12">
                                             <h5 class="col-md-11"><%= link_to o.oppty.opptyName, o.oppty, style: "border: 0px !important;"%></h5>
-                                            <img id="delete-btn-manager-1" class="btn-x-manager" onclick="confirmDeleteManager(<%= o.id %>, <%= name.delete(' ') + 'ajax' + 'todo'%>)" src="/assets/redx.png" alt="X" border="0"/>
+                                            <img id="delete-btn-manager-1" class="btn-x-manager" onclick="confirmDeleteManager(<%= o.id %>, <%= name.delete(' ') + 'ajax' + 'todo'%>)" src=<%= asset_path 'redx.png' %> alt="X" border="0"/>
                                         </li>
                                     <% end %>
                                 <%end%>
