fixed background path

--- a/app/assets/stylesheets/users.css.scss.erb
+++ b/app/assets/stylesheets/users.css.scss.erb
@@ -7,7 +7,7 @@
 body {
   padding-top: 40px;
   padding-bottom: 40px;
-  background-image: url("grey-gaussian-background-large.jpg");
+  background-image: url("<%= asset_path 'grey-gaussian-background-large.jpg' %>");
 }
 
 
